Add Netlify configuration: static export, build settings, redirects, and deployment docs

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,12 @@ jspm_packages/
 
 # Session data (development only)
 data/sessions/*.json
+
+# Netlify
+.netlify/
+dist/
+out/
+
+# Environment variables
+.env.local
+.env.production
