--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "export": "next build && next export",
-    "netlify": "npm run build"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "14.0.4",
