Integrate Tavus API for avatar rendering with Daily.co support
- Added Tavus API integration using replica and persona IDs
- Created API route for Tavus conversation creation
- Added webhook endpoint for Tavus callbacks
- Updated AvatarStage to embed Tavus/Daily.co video streams
- Added fallback support for direct embed URLs
- Enhanced error handling and logging for debugging

--- a/env.example
+++ b/env.example
@@ -4,6 +4,11 @@
 NEXT_PUBLIC_BRAND_NAME="EverFriends"
 NEXT_PUBLIC_BRAND_TAGLINE="A friendly concierge, powered by Human+"
 
+# Tavus API Configuration
+TAVUS_API_KEY="your_tavus_api_key_here"
+# Optional: Webhook callback URL for Tavus callbacks (e.g., https://yourdomain.com/api/tavus/webhook)
+# TAVUS_CALLBACK_URL="https://yourdomain.com/api/tavus/webhook"
+
 # HeyGen Realtime Avatar (when ready)
 HEYGEN_API_KEY="your_heygen_api_key_here"
 HEYGEN_AVATAR_ID="your_avatar_id_here"
